--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,18 +9,18 @@
 
 
     <TextView
-            android:text="TextView"
+            android:text="@string/str_currency"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/textView" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            android:layout_marginTop="144dp" app:layout_constraintHorizontal_bias="0.0"/>
+            android:layout_marginTop="144dp" app:layout_constraintHorizontal_bias="0.0" style="@style/TitleTextStyle"/>
     <TextView
-            android:text="TextView"
+            android:text="@string/str_calculator"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/textView2"
             app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintEnd_toEndOf="@+id/textView"
-            app:layout_constraintStart_toStartOf="@+id/textView"/>
+            app:layout_constraintStart_toStartOf="@+id/textView" style="@style/TitleTextStyle"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
