--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -10,13 +10,13 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             app:srcCompat="@mipmap/ic_launcher"
-            android:id="@+id/imageView2"
+            android:id="@+id/id_spinner_image"
             />
     <TextView
             android:text="TextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:id="@+id/textView3"
+            android:id="@+id/id_spinner_text"
             android:layout_weight="1"/>
 </LinearLayout>
