--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -102,7 +102,7 @@
 
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/spinner"
+            android:id="@+id/id_spiner_to"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="16dp"
             android:layout_marginTop="32dp"
@@ -117,14 +117,14 @@
             tools:layout_editor_absoluteX="193dp"
             android:id="@+id/imageView"
             android:layout_marginTop="32dp"
-            app:layout_constraintStart_toEndOf="@+id/spinner"
-            app:layout_constraintEnd_toStartOf="@id/spinner2"
+            app:layout_constraintStart_toEndOf="@+id/id_spiner_to"
+            app:layout_constraintEnd_toStartOf="@id/id_spinner_from"
             app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"/>
 
     <Spinner
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/spinner2" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
+            android:id="@+id/id_spinner_from" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
             android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
             app:layout_constraintStart_toEndOf="@+id/imageView" android:layout_marginStart="8dp"/>
 
