--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -1,19 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="horizontal"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:orientation="horizontal"
+        android:layout_marginTop="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
 
     <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             app:srcCompat="@mipmap/ic_launcher"
             android:id="@+id/id_spinner_image"
+            android:paddingEnd="4dp"
             />
     <TextView
             android:text="TextView"
+            android:textSize="25sp"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
