--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -9,16 +9,18 @@
 
 
     <ImageView
+            android:contentDescription="@string/str_flag_con"
             android:layout_gravity="center"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="@dimen/dimen_flag_icon"
+            android:layout_height="@dimen/dimen_flag_icon"
             app:srcCompat="@mipmap/ic_launcher"
             android:id="@+id/id_spinner_image"
-            android:paddingEnd="4dp"
+            android:layout_margin="4dp"
             />
+
     <TextView
-            android:text="TextView"
-            android:textSize="25sp"
+            android:padding="4dp"
+            android:textSize="@dimen/dimen_spinner_txt_size"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
