--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,10 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">@color/project_green</color>
 
     <color name="project_blue">#0067E0</color>
     <color name="project_green">#02D99A</color>
+    <color name="faded_text_colour">#C4C4C4</color>
+
 </resources>
