--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,8 +3,8 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimary">@android:color/white</item>
+        <item name="colorPrimaryDark">@android:color/white</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
@@ -20,12 +20,29 @@
     <style name="AppTheme.NoActionBar" parent="AppTheme">
         <item name="windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
-        <item name="actionBarStyle">@style/AppToolbar</item>
-        <!--<item name="android:actionMenuTextColor">@android:color/black</item>-->
     </style>
 
     <style name="AppToolbar" parent="AppTheme">
+        <!--<item name="android:textAllCaps">false</item>-->
+        <item name="actionMenuTextColor">@color/project_green</item>
+        <item name="actionMenuTextAppearance">@style/AppBarTextTitle</item>
+
+    </style>
+
+    <style name="toolbarStyle" parent="AppTheme">
+        <!--<item name="android:titleTextStyle">@style/AppBarTextTitle</item>-->
         <!--<item name="android:textColor">@android:color/black</item>-->
+
+    </style>
+
+    <style name="AppBarTextTitle" parent="TextAppearance.AppCompat.Title">
+        <item name="actionMenuTextColor">@color/project_green</item>
+
+    </style>
+
+
+    <style name="actionBtnStyle" parent="@style/Widget.AppCompat.ActionButton">
+
 
     </style>
 
