--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -15,7 +15,9 @@
             android:id="@+id/textView" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            android:layout_marginTop="64dp" app:layout_constraintHorizontal_bias="0.0" style="@style/TitleTextStyle"/>
+            android:layout_marginTop="64dp" app:layout_constraintHorizontal_bias="0.0"
+            style="@style/TitleTextStyle"
+            android:fontFamily="@font/montserrat_alternates"/>
     <TextView
             android:text="@string/str_calculator"
             android:layout_width="0dp"
@@ -60,7 +62,7 @@
                 android:textSize="@dimen/dimen_edittxt_size"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/textInputLayout">
+                android:id="@+id/textInputLayout" android:fontFamily="@font/montserrat_alternates">
 
         </com.google.android.material.textfield.TextInputEditText>
 
@@ -95,7 +97,7 @@
                 android:textSize="@dimen/dimen_edittxt_size"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/textInputLayout2">
+                android:id="@+id/textInputLayout2" android:fontFamily="@font/montserrat_alternates">
 
         </com.google.android.material.textfield.TextInputEditText>
 
