--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,12 +14,14 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:paddingStart">16dp</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:fontFamily">@font/montserrat_alternates</item>
         <item name="android:textColor">@color/project_blue</item>
     </style>
 
     <style name="AppTheme.NoActionBar" parent="AppTheme">
         <item name="windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
+        <item name="android:fontFamily">@font/actor</item>
     </style>
 
     <style name="AppToolbar" parent="AppTheme">
