--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -62,7 +62,7 @@
                 android:textSize="@dimen/dimen_edittxt_size"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/textInputLayout" android:fontFamily="@font/montserrat_alternates">
+                android:id="@+id/id_edittxt_currency_from" android:fontFamily="@font/montserrat_alternates">
 
         </com.google.android.material.textfield.TextInputEditText>
 
@@ -71,7 +71,7 @@
                 android:text="NGN"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView5"
+                android:id="@+id/txtvw_currency_from"
                 android:textSize="@dimen/dimen_edittxt_size"
                 android:textColor="@color/faded_text_colour"
                 android:textAlignment="center"/>
@@ -97,7 +97,7 @@
                 android:textSize="@dimen/dimen_edittxt_size"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/textInputLayout2" android:fontFamily="@font/montserrat_alternates">
+                android:id="@+id/edittxt_currenct_to" android:fontFamily="@font/montserrat_alternates">
 
         </com.google.android.material.textfield.TextInputEditText>
 
@@ -107,7 +107,7 @@
                 android:text="USD"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView6"
+                android:id="@+id/txtvw_currency_to"
                 android:textSize="@dimen/dimen_edittxt_size" android:textAlignment="center"/>
 
     </LinearLayout>
@@ -156,7 +156,22 @@
             android:text="@string/str_btn_convert"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/button" android:layout_marginTop="32dp" android:layout_marginEnd="32dp"
+            android:id="@+id/id_btn_convert" android:layout_marginTop="32dp" android:layout_marginEnd="32dp"
             android:layout_marginStart="32dp" android:textAllCaps="false"/>
+
+    <TextView
+            android:id="@+id/id_txtvw_test_result"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="16dp"
+            android:text="TextView"
+            android:textAlignment="center"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/id_btn_convert" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
