--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -93,11 +93,12 @@
             android:layout_marginEnd="32dp" android:layout_marginTop="16dp">
 
         <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/edittxt_currenct_to"
+                android:id="@+id/edittxt_currency_to"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="4"
                 android:background="@null"
+                android:enabled="false"
                 android:fontFamily="@font/montserrat_alternates"
                 android:hint="250"
                 android:inputType="number"
