removed supprtactionbar title to match mock

--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -1,59 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/editxt_margin"
+        android:layout_marginBottom="@dimen/editxt_margin"
+        android:paddingStart="@dimen/editxt_padding"
+        android:paddingTop="@dimen/editxt_padding"
+        android:paddingBottom="@dimen/editxt_padding"
         tools:context=".HomeActivity">
 
 
     <TextView
+            android:id="@+id/textView"
+            style="@style/TitleTextStyle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="64dp"
+            android:layout_marginEnd="8dp"
+            android:fontFamily="@font/montserrat_alternates"
             android:text="@string/str_currency"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            android:layout_marginTop="64dp" app:layout_constraintHorizontal_bias="0.0"
-            style="@style/TitleTextStyle"
-            android:fontFamily="@font/montserrat_alternates"/>
-    <TextView
-            android:text="@string/str_calculator"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView2"
-            app:layout_constraintTop_toBottomOf="@+id/textView"
-            app:layout_constraintStart_toStartOf="@+id/textView"
-            style="@style/TitleTextStyle"
-    />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-            android:text="@string/str_period"
+            android:id="@+id/textView2"
+            style="@style/TitleTextStyle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/str_calculator"
+            app:layout_constraintStart_toStartOf="@+id/textView"
+            app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <TextView
+            android:id="@+id/textView4"
+            style="@style/TitleTextStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textView4"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/textView2"
-            app:layout_constraintTop_toBottomOf="@+id/textView"
-            style="@style/TitleTextStyle"
-            android:textColor="@color/project_green"
-            app:layout_constraintHorizontal_bias="0.0"
-            android:textAlignment="textStart"
             android:layout_margin="0dp"
+            android:paddingStart="0dp"
             android:paddingEnd="0dp"
-            android:paddingStart="0dp"/>
+            android:text="@string/str_period"
+            android:textAlignment="textStart"
+            android:textColor="@color/project_green"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/textView2"
+            app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <LinearLayout
             android:id="@+id/id_layout_from"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="64dp"
+            android:layout_marginEnd="32dp"
             android:background="@color/md_grey_100"
             android:orientation="horizontal"
-            app:layout_constraintTop_toBottomOf="@id/textView2"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content" android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
-            android:layout_marginTop="64dp">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/textView2">
 
         <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/edittxt_currency_from"
@@ -64,92 +74,95 @@
                 android:fontFamily="@font/montserrat_alternates"
                 android:hint="25"
                 android:inputType="number"
+                android:paddingStart="@dimen/editxt_padding"
                 android:textSize="@dimen/dimen_edittxt_size">
 
         </com.google.android.material.textfield.TextInputEditText>
 
         <TextView
-                android:layout_weight="1"
-                android:text="NGN"
+                android:id="@+id/txtvw_currency_from"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/txtvw_currency_from"
-                android:textSize="@dimen/dimen_edittxt_size"
+                android:layout_weight="1"
+                android:textAlignment="center"
                 android:textColor="@color/faded_text_colour"
-                android:textAlignment="center"/>
+                android:textSize="@dimen/dimen_edittxt_size" />
 
     </LinearLayout>
 
     <LinearLayout
-            app:layout_constraintTop_toBottomOf="@id/id_layout_from"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:background="@color/md_grey_100"
             android:id="@+id/id_layout_to"
-            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
-            android:layout_marginEnd="32dp" android:layout_marginTop="16dp">
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="32dp"
+            android:background="@color/md_grey_100"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/id_layout_from">
 
         <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/edittxt_currency_to"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/editxt_padding"
                 android:layout_weight="4"
                 android:background="@null"
                 android:enabled="false"
                 android:fontFamily="@font/montserrat_alternates"
-                android:hint="250"
+                android:hint="0.0"
                 android:inputType="number"
                 android:textSize="@dimen/dimen_edittxt_size">
 
         </com.google.android.material.textfield.TextInputEditText>
 
         <TextView
-                android:layout_weight="1"
-                android:textColor="@color/faded_text_colour"
-                android:text="USD"
+                android:id="@+id/txtvw_currency_to"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/txtvw_currency_to"
-                android:textSize="@dimen/dimen_edittxt_size" android:textAlignment="center"/>
+                android:layout_weight="1"
+                android:textAlignment="center"
+                android:textColor="@color/faded_text_colour"
+                android:textSize="@dimen/dimen_edittxt_size" />
 
     </LinearLayout>
 
     <LinearLayout
             android:id="@+id/id_layout_spinners"
-            app:layout_constraintTop_toBottomOf="@+id/id_layout_to"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
+            android:layout_marginTop="32dp"
             android:layout_marginEnd="32dp"
-            android:layout_marginTop="32dp">
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/id_layout_to">
 
         <androidx.appcompat.widget.AppCompatSpinner
-                android:layout_weight="3"
-                android:background="@drawable/spinner_border"
+                android:id="@+id/id_spinner_from"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/id_spinner_from"/>
+                android:layout_weight="3"
+                android:background="@drawable/spinner_border" />
 
         <ImageView
-                android:scaleType="centerCrop"
-                android:layout_weight="1"
+                android:id="@+id/imageView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_swap"
-                android:id="@+id/imageView"/>
+                android:layout_gravity="center_horizontal|center_vertical"
+                android:layout_weight="1"
+                android:scaleType="center"
+                android:src="@drawable/ic_swap" />
 
         <androidx.appcompat.widget.AppCompatSpinner
-                android:layout_weight="3"
-                android:background="@drawable/spinner_border"
+                android:id="@+id/id_spinner_to"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/id_spinner_to"/>
+                android:layout_weight="3"
+                android:background="@drawable/spinner_border" />
 
     </LinearLayout>
 
@@ -168,19 +181,18 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/id_layout_spinners" />
 
-    <TextView
-            android:id="@+id/id_txtvw_test_result"
+    <LinearLayout
+            android:id="@+id/graph"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="32dp"
-            android:layout_marginEnd="16dp"
-            android:text="TextView"
-            android:textAlignment="center"
-            android:textSize="24sp"
-            android:textStyle="bold"
+            android:layout_height="400dp"
+            android:layout_marginTop="135dp"
+            android:background="@color/project_blue"
+            android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/id_btn_convert" />
+            app:layout_constraintTop_toBottomOf="@+id/id_btn_convert">
+
+    </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
