--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
 
     <color name="project_blue">#0067E0</color>
     <color name="project_green">#02D99A</color>
+    <color name="project_silver">#C0C0C0</color>
     <color name="faded_text_colour">#C4C4C4</color>
 
 </resources>
