--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -76,13 +76,11 @@
         </com.google.android.material.textfield.TextInputEditText>
 
         <TextView
+                style="@style/currencyInputStyle"
                 android:id="@+id/txtvw_currency_from"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textAlignment="center"
-                android:textColor="@color/faded_text_colour"
-                android:textSize="@dimen/dimen_edittxt_size" />
+                android:layout_weight="1" />
 
     </LinearLayout>
 
@@ -116,13 +114,11 @@
         </com.google.android.material.textfield.TextInputEditText>
 
         <TextView
+                style="@style/currencyInputStyle"
                 android:id="@+id/txtvw_currency_to"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textAlignment="center"
-                android:textColor="@color/faded_text_colour"
-                android:textSize="@dimen/dimen_edittxt_size" />
+                android:layout_weight="1" />
 
     </LinearLayout>
 
