--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -7,6 +7,6 @@
 
     <fragment
             android:id="@+id/currencyConvertFragment"
-            android:name="io.audioshinigami.currencyconverter.fragments.CurrencyConvertFragment"
+            android:name="io.audioshinigami.currencyconverter.convertAmount.CurrencyConvertFragment"
             android:label="      " />
 </navigation>
